@@ -25,6 +25,7 @@
 * Increase defaults for REST request rate limit since DoS and QoS filters will handle this 
 * Add support for JSON configuration to export and import dates as ISO 8601 format 
 * Fix bug in Serial Port Manager that added a new high priority thread every time the serial ports were refreshed
+* Improve error handling for rejected task executions to ensure they cannot kill the main timer thread
 
 *Version 3.6.4*
 * Revert data source management permission to only allow creating new data sources, not give access to all data sources
